2011-11-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile: 
	* Source/NSCFArray.m: Objective-C class for CFArray.

2011-11-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumber.c: Remove unneeded #if statement.
	* Source/CFNumberFormatter.c: Simplify SetProperty and 
	CopyProperty functions.

2011-11-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/CFBase.h:
	* Source/GNUmakefile: Do not define MAC_OS_X_VERSION_MIN_ALLOWED.

2011-11-20 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c:
	* Source/CFBase.c:
	* Source/CFStringFormat.c:
	* Source/CFLocale.c:
	* Source/CFUUID.c:
	* Source/CFArray.c:
	* Source/CFRuntime.c:
	* Headers/CoreFoundation/CFPropertyList.h:
	* Headers/CoreFoundation/CFRuntime.h:
	* Headers/CoreFoundation/CFNumber.h:
	* Headers/CoreFoundation/CFError.h:
	* Headers/CoreFoundation/CFTimeZone.h:
	* Headers/CoreFoundation/CFStream.h:
	* Headers/CoreFoundation/CFStringEncodingExt.h:
	* Headers/CoreFoundation/CFLocale.h:
	* Headers/CoreFoundation/CFString.h:
	* Headers/CoreFoundation/CFCalendar.h:
	* Headers/CoreFoundation/CFBase.h:
	* Headers/CoreFoundation/CFNumberFormatter.h: Do not include
	GSVersionMacros.h as this file was causing problems due objc
	extensions in it.

2011-11-20 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.c: Finish runtime function for CFArray type.

2011-11-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.c: Fix bugs.
	* Tests/CFArray: Added tests.

2011-10-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.c: Finished up CFArray for now.

2011-10-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFArray.c:
	* Source/CFArray.m:
	* Source/CFRuntime.c: Completely replace CFArray with a pure C
	implementation.
	* Headers/CoreFoundation/CFArray.h: Export functions for C++ compatibility.

2011-10-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.c: Start work on C-only implementation of CFArray.
